--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -16,8 +16,9 @@ body{
 .side-bar-container{
     display: inline-block;
     width: 150px;
-    margin: 0px 0px;
+    margin: 10px 10px;
     padding: 10px;
+    border-radius: 4px;
     background-color: #e8e689;
     list-style-type: none;
     font-size: 17px;
@@ -39,4 +40,13 @@ body{
     color: inherit;
     text-decoration: inherit;
     cursor: inherit;
+}
+.main-body{
+    position: absolute;
+    width: calc( 100% - 170px );
+    height: calc( 100% - 70px);
+    top: 60px;
+    left: 160px;
+    padding: 10px;
+    border: 1px solid black;
 }
