--- a/src/main/resources/templates/company-admin.html
+++ b/src/main/resources/templates/company-admin.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Job Searching Platform</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/company-admin.css}"/>
+    <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
+    <script type="text/javascript" th:src="@{/js/company-admin.js}"></script>
+    <script>
+        $(window).on('load', function(){
+            Company.init();
+        });
+    </script>
+
 </head>
 <body>
+<div class="header-container">
+    <span>Job Searching Platform</span>
+</div>
+<ul class="side-bar-container" id="side-bar">
+    <li class="side-bar-option" id="add-job-menu">Add Job</li>
+    <li class="side-bar-option" id="view-job-menu">View Jobs</li>
+    <li class="side-bar-option" id="profile-menu">Profile</li>
+    <li class="side-bar-option"><a href="/logout" class="logout-link">Logout</a></li>
+</ul>
 
-  <h1>Welcome to company admin page</h1>
+<div id="main-body" class="main-body">
+
+</div>
+
 
 </body>
 </html>
