--- a/src/main/resources/templates/job-seeker-add-application.html
+++ b/src/main/resources/templates/job-seeker-add-application.html
@@ -4,39 +4,39 @@
 <div id="question-section">
     <h3>Questions</h3>
     <th:block th:each="question: ${questions}">
-        <div class="js-question-container">
+        <div class="js-question-container form-unit">
             <span th:text="${question.id}" style="display: none;" class="js-question-id"></span>
-            <div class="js-question-value" th:text="${question.questionName}"></div>
-            <input type="text" class="js-answer-value" />
+            <div class="js-question-value form-label" th:text="${question.questionName}"></div>
+            <input type="text" class="js-answer-value form-input" />
         </div>
     </th:block>
 
-    <button id="application-question-next-btn">Next</button>
+    <button id="application-question-next-btn" class="secondary-btn">Next</button>
 </div>
 
 <div id="document-section">
     <h3>Documents</h3>
-    <div>If documents is not uploaded in document section, kindly upload document in that section and proceed further</div>
-    <div th:if="${#bools.isTrue(job.isResumeNeeded)}">
-        <label>Upload Resume</label>
+    <div class="form-info">If documents is not uploaded in document section, kindly upload document in that section and proceed further</div>
+    <div th:if="${#bools.isTrue(job.isResumeNeeded)}" class="form-unit">
+        <label class="form-label">Upload Resume</label>
         <select name="resume-input" id="resume-input">
             <th:block th:each="document: ${documents}">
                 <option th:value="${document.docId}" th:if="${#strings.equals(document.type, 'RESUME')}" th:text="${document.name}"></option>
             </th:block>
         </select>
     </div>
-    <div th:if="${#bools.isTrue(job.isCoverLetterNeeded)}">
-        <label>Upload Resume</label>
+    <div th:if="${#bools.isTrue(job.isCoverLetterNeeded)}" class="form-unit">
+        <label class="form-label">Upload Resume</label>
         <select name="cover-letter-input" id="cover-letter-input">
             <th:block th:each="document: ${documents}">
                 <option th:value="${document.docId}" th:if="${#strings.equals(document.type, 'COVER_LETTER')}" th:text="${document.name}"></option>
             </th:block>
         </select>
     </div>
-    <button id="application-document-next-btn">Next</button>
+    <button id="application-document-next-btn" class="secondary-btn">Next</button>
 </div>
 
 <div id="complete-section" style="display:none">
-    Please click submit to confirm the submission.
-    <button id="application-submit-btn">Submit</button>
+    <div class="form-info">click submit to confirm the submission.</div> 
+    <button id="application-submit-btn" class="primary-btn">Submit</button>
 </div>
