--- a/src/main/resources/templates/job-seeker-application.html
+++ b/src/main/resources/templates/job-seeker-application.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-    <table>
+    <table class="styled-table">
         <tr>
             <th>Company Name</th>
             <th>Title</th>
