--- a/src/main/resources/templates/job-seeker-profile.html
+++ b/src/main/resources/templates/job-seeker-profile.html
@@ -3,43 +3,43 @@
     
     <form th:object="${jobSeekerDetails}" enctype="utf8" id="profile-form">
         <input th:field="*{user.id}" type="hidden"/>
-        <div>
-            <label>Username</label>
-            <input th:field="*{user.username}"/>
+        <div class="form-unit">
+            <label class="form-label">Username</label>
+            <input th:field="*{user.username}" class="form-input"/>
             <p th:each="error: ${#fields.errors('user.username')}"
                th:text="${error}">Validation error</p>
         </div>
 
-        <div>
-            <label>password</label>
-            <input type="password" th:field="*{user.password}"/>
+        <div class="form-unit">
+            <label class="form-label">password</label>
+            <input type="password" th:field="*{user.password}" class="form-input"/>
             <p th:each="error : ${#fields.errors('user.password')}"
                th:text="${error}">Validation error</p>
         </div>
-        <div>
-            <label>confirm password</label>
-            <input type="password" th:field="*{user.passwordConfirm}"/>
+        <div class="form-unit">
+            <label class="form-label">confirm password</label>
+            <input type="password" th:field="*{user.passwordConfirm}" class="form-input"/>
             <p th:each="error : ${#fields.errors('user.passwordConfirm')}"
                th:text="${error}">Validation error</p>
         </div>
     
         <div class="additional-details js-additional-details" id="job-seeker-container">
             <h3>Job Seeker Details</h3>
-            <div>
-                <label>Bio</label>
-                <input type="text" th:field="*{bio}"/>
+            <div class="form-unit">
+                <label class="form-label">Bio</label>
+                <input type="text" th:field="*{bio}" class="form-input"/>
                 <p th:each="error : ${#fields.errors('bio')}"
                    th:text="${error}">Validation error</p>
             </div>
-            <div>
-                <label>Address</label>
-                <textarea maxlength="200" th:field="*{address}"/>
+            <div class="form-unit">
+                <label class="form-label">Address</label>
+                <textarea maxlength="200" th:field="*{address}" class="form-text-area"/>
                 <p th:each="error : ${#fields.errors('address')}"
                    th:text="${error}">Validation error</p>
             </div>
-            <div>
-                <label>Contact Info</label>
-                <input type="text" th:field="*{contactInfo}"/>
+            <div class="form-unit">
+                <label class="form-label">Contact Info</label>
+                <input type="text" th:field="*{contactInfo}" class="form-input"/>
                 <p th:each="error : ${#fields.errors('contactInfo')}"
                    th:text="${error}">Validation error</p>
             </div>
@@ -47,9 +47,9 @@
 
     </form>
 
-    <button id="update-profile-btn">Update</button>
-    <button id="reset-profile-btn">Reset</button>
+    <button id="update-profile-btn" class="primary-btn">Update</button>
+    <button id="reset-profile-btn" class="secondary-btn">Reset</button>
 
-    <p th:if="${message}" th:text="${message}">Server side error</p>
+    <p th:if="${message}" th:text="${message}" class="info-message">Server side error</p>
 
 </html>
