--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/register.css}" />
+    <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
+    <script type="text/javascript" th:src="@{/js/login.js}"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
 <body>
-<h1>Welcome to login page</h1>
-<form method="POST" action="/login" enctype="utf8">
-    <input name="username" type="text" placeholder="Username"
-    autofocus="true"/>
-    <input name="password" type="password" placeholder="Password"/>
-    <p th:if="${error}" th:text="${error}">Server side error</p>
-    <button type="submit" >Login</button>
-</form>
-<a th:href="@{/register}">Create new Account</a>
-<p th:if="${message}" th:text="${message}">Server side error</p>
+    <h1 class="form-title">Login page</h1>
+    <div class="registration-container">
+        <form method="POST" action="/login" enctype="utf8">
+            <input type="hidden" name="_csrf" id="csrf-token"/>
+            <div class="form-unit">
+                <input name="username" type="text" placeholder="Username" autofocus="true" class="form-input" />
+            </div>
+            <div class="form-unit">
+                <input name="password" type="password" placeholder="Password" class="form-input" />
+            </div>
+
+            <p th:if="${error}" th:text="${error}" class="error-message">Server side error</p>
+            <button type="submit" class="primary-btn">Login</button>
+        </form>
+        <a th:href="@{/register}">Create new Account</a>
+        <p th:if="${message}" th:text="${message}" class="info-message">Server side error</p>
+    </div>
+
 
 </body>
+
 </html>
