--- a/src/main/resources/templates/company-admin.html
+++ b/src/main/resources/templates/company-admin.html
@@ -16,7 +16,7 @@
     <li class="side-bar-option" id="add-job-menu">Add Job</li>
     <li class="side-bar-option" id="view-job-menu">View Jobs</li>
     <li class="side-bar-option" id="profile-menu">Profile</li>
-    <li class="side-bar-option"><a href="/logout" class="logout-link">Logout</a></li>
+    <li class="side-bar-option" id="logout-btn">Logout</li>
 </ul>
 
 <div id="main-body" class="main-body">
