--- a/src/main/resources/templates/job-seeker.html
+++ b/src/main/resources/templates/job-seeker.html
@@ -18,7 +18,7 @@
       <li class="side-bar-option" id="job-application-menu">Job Applications</li>
       <li class="side-bar-option" id="document-menu">Documents</li>
       <li class="side-bar-option" id="profile-menu">Profile</li>
-      <li class="side-bar-option"><a href="/logout" class="logout-link">Logout</a></li>
+      <li class="side-bar-option" id="logout-btn">Logout</li>
   </ul>
 
 <div id="main-body" class="main-body">
