--- a/src/main/resources/templates/company-admin-profile.html
+++ b/src/main/resources/templates/company-admin-profile.html
@@ -26,7 +26,7 @@
   <div class="additional-details js-additional-details" id="job-seeker-container">
     <h3>Job Seeker Details</h3>
     <div class="form-unit">
-      <label class="form-label">Bio</label>
+      <label class="form-label">Name</label>
       <input type="text" th:field="*{name}" class="form-input"/>
       <p th:each="error : ${#fields.errors('name')}"
          th:text="${error}" class="error-message">Validation error</p>
