--- a/src/main/resources/templates/job-seeker-application.html
+++ b/src/main/resources/templates/job-seeker-application.html
@@ -10,14 +10,16 @@
         </tr>
         <th:block th:each="jobApp: ${jobApplications}">
             <tr>
+                <td th:text="${jobApp.id}" style="display: none;" class="js-app-id"/>
                 <td th:text="${jobApp.job.company.name}" />
                 <td th:text="${jobApp.job.title}" />
                 <td th:text="${jobApp.job.location}" />
                 <td th:text="${jobApp.applicationStatus}" />
+                <td><button class="js-withdraw-application-btn table-btn">Withdraw</button></td>
             </tr>
         </th:block>
     </table>
 
-    <p th:if="${message}" th:text="${message}">Server side error</p>
+    <p th:if="${message}" th:text="${message}" class="info-message">Server side error</p>
 
 </html>
