--- a/src/main/resources/templates/company-job-application.html
+++ b/src/main/resources/templates/company-job-application.html
@@ -24,6 +24,7 @@
         </th:block>
     </table>
 
+    <button class="secondary-btn js-refresh-btn">Back</button>
     <p th:if="${message}" th:text="${message}">Server side error</p>
 
 </html>
