--- a/src/main/resources/templates/job-seeker-add-application.html
+++ b/src/main/resources/templates/job-seeker-add-application.html
@@ -11,6 +11,7 @@
         </div>
     </th:block>
 
+    <button class="secondary-btn js-refresh-btn">Cancel</button>
     <button id="application-question-next-btn" class="secondary-btn">Next</button>
 </div>
 
@@ -33,10 +34,12 @@
             </th:block>
         </select>
     </div>
+    <button class="secondary-btn js-refresh-btn">Cancel</button>
     <button id="application-document-next-btn" class="secondary-btn">Next</button>
 </div>
 
 <div id="complete-section" style="display:none">
     <div class="form-info">click submit to confirm the submission.</div> 
+    <button class="secondary-btn js-refresh-btn">Cancel</button>
     <button id="application-submit-btn" class="primary-btn">Submit</button>
 </div>
