--- a/src/main/resources/templates/job-seeker-job-detail.html
+++ b/src/main/resources/templates/job-seeker-job-detail.html
@@ -49,7 +49,10 @@
     </div>
 
 
+
+<button class="secondary-btn js-refresh-btn">Back</button>
 <button id="create-job-application-btn" class="primary-btn">Apply</button>
+
 
 <p th:if="${message}" th:text="${message}" class="info-message">Server side error</p>
 
