--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
     <script type="text/javascript" th:src="@{/js/login.js}"></script>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Job Searching Platform</title>
 </head>
 
 <body>
