add sample login

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,6 +30,9 @@
         <p th:if="${message}" th:text="${message}" class="info-message">Server side error</p>
         <p th:if="${param.loginError}" th:text="${param.loginError}"  class="error-message"></p>
 
+        <p> jobseeker sample login => username : jobseeker ; password : dummy@123 </p>
+        <p> company admin sample login => username : companyadmin ; password : dummy@123 </p>
+
     </div>
 
 
