made UI changes

--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -9,3 +9,30 @@
     transform: translateX(-50%);
     text-align: center;
 }
+
+
+
+.registration-container {
+  width : 60%;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #ffffff; /* Change as needed */
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Change as needed */
+}
+
+.form-unit {
+  margin-bottom: 20px;
+}
+
+.form-label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.form-input, .form-text-area, .form-select {
+  width: 100%;
+  height : 50px;
+  padding: 10px;
+
