--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,9 +1,16 @@
 body{
  border: none;
  margin : 0px;
+ font-family: Arial, sans-serif;
+ background-color: #f0f0f0; /* Change as needed */
 }
 *{
     box-sizing: border-box;
+}
+
+h1.form-title {
+  text-align: center;
+  margin-top: 20px;
 }
 .header-container{
     background-color: #a1a0a0;
@@ -15,7 +22,7 @@ body{
 }
 .side-bar-container{
     display: inline-block;
-    width: 150px;
+    width: 250px;
     margin: 10px 10px;
     padding: 10px;
     border-radius: 4px;
@@ -28,6 +35,7 @@ body{
     height: 30px;
     text-align: center;
     padding: 5px;
+    margin : 10px 0px;
     cursor: pointer;
     border-radius: 5px;
 }
@@ -48,12 +56,17 @@ body{
 }
 .main-body{
     position: absolute;
-    width: calc( 100% - 170px );
+    width: calc( 100% - 300px );
     height: calc( 100% - 70px);
     top: 60px;
-    left: 160px;
-    padding: 20px;
+    left: 270px;
+    background : white;
+    padding: 25px 0px;
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .form-title{
